objects/Lead_Trials__c.object
<CustomObject>
    <fields>
        <fullName>Ent_Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ent_Trial</label>
        <referenceTo>Ent_Trial__c</referenceTo>
        <relationshipLabel>Lead Trials</relationshipLabel>
        <relationshipName>Lead_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Trials</relationshipLabel>
        <relationshipName>LeadTrials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>TrialLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Trial</label>
    <nameField>
        <displayFormat>LT-{000000}</displayFormat>
        <label>Lead Trial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>